<resources>
    <string name="app_name">CampusAssistance</string>

    <!--tab-->
    <string name="goods">商品</string>
    <string name="lost_and_fount">失物招领</string>
    <string name="mine">我的</string>
    <string name="message">消息</string>

    <!--mine-->
    <string name="login">登录</string>
    <string name="nickname">昵称</string>
    <string name="commonly_used">常用</string>
    <string name="release_goods">发布商品</string>
    <string name="released_record">发布商品\n历史</string>
    <string name="change_password">修改密码</string>
    <string name="tip">提示</string>
    <string name="is_sure_log_out">是否退出登录</string>
    <string name="log_out">退出登录</string>
    <string name="release_lost_and_found">发布失物\n招领</string>
    <string name="released_lost_and_found_good_record">发布失物\n招领历史</string>

    <!--release-->
    <string name="description">描述</string>
    <string name="prices">价格</string>
    <string name="input_goods_prices">请输入商品价格（单位：元）</string>
    <string name="tele">电话</string>
    <string name="input_tele">请输入电话号码</string>
    <string name="input_description">请输入商品描述</string>
    <string name="release_good">确认发布</string>
    <string name="released_time">发布时间</string>
    <string name="no_record">暂无记录</string>
    <string name="contact_way">联系方式</string>
    <string name="input_contact_way">请输入联系方式(微信或手机号)</string>
    <string name="input_lost_and_found_good_description">请输入要发布的内容</string>

    <!--account-->
    <string name="account">账号：</string>
    <string name="password">密码：</string>
    <string name="old_password">旧密码：</string>
    <string name="new_password">新密码：</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_new_password">请输入新密码</string>

    <!--goods-->
    <string name="want_to_search">请输入想要搜索的内容</string>
    <string name="search">搜索</string>

    <!--chat-->
    <string name="chat_message">对话信息</string>
    <string name="input_message">请输入......</string>
    <string name="send_message">发送</string>
    <string name="chat_record">聊天记录</string>
    <string name="last_time">时间</string>

    <!--good_detail-->
    <string name="description_content">描述内容</string>
    <string name="chat_with_seller">与卖家进行联系</string>
    <string name="seller">卖家</string>

</resources>