<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_goods_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_good_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/goods_no_select" />

    <TextView
        android:id="@+id/tv_description_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tv_telephone_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tele" />

    <TextView
        android:id="@+id/tv_released_time_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/released_time" />

    <TextView
        android:id="@+id/tv_prices_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prices" />

</LinearLayout>