<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_detail_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back" />

        <ImageView
            android:id="@+id/iv_good_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seller"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seller"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_content"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/released_time"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_released_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_time"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/prices"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prices"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tele"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tele"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_chat_with_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/seller" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_with_seller"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>