<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".account.activity.ReleaseGood">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal"
            android:text="@string/tele"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_tele"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_view_background"
            android:hint="@string/input_tele" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal"
            android:text="@string/prices"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_prices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_view_background"
            android:hint="@string/input_goods_prices" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/description_background">

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/input_description"
            android:inputType="textMultiLine"
            android:minLines="4" />

        <ImageView
            android:id="@+id/iv_add_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/et_description"
            android:background="@drawable/add_picture" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_release_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/release_good" />


</LinearLayout>