<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:visibility="gone" />

    <!--头像、昵称-->
    <RelativeLayout
        android:id="@+id/rl_avatar_and_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/avatar" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/iv_avatar"
            android:text="@string/nickname"
            android:textSize="25dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/commonly_used"
        android:textSize="20dp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:columnCount="3"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_release_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/release_good" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_goods"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_released_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/released_record" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/released_record"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/change_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="14dp" />

        </LinearLayout>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:columnCount="3"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/log_out" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textSize="14dp" />

        </LinearLayout>

    </GridLayout>
</LinearLayout>