<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_chat_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:background="@drawable/avatar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/tv_other_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_chat_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_other_name"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/chat_record"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_last_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/last_time"
            android:textSize="15dp" />
    </RelativeLayout>

</LinearLayout>